--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ minecraft_version_range=[1.18,1.19)
 forge_version=39.0.64
 forge_version_range=[39,)
 loader_version_range=[39,)
-mappings_channel=official
-mappings_version=1.18.1
+mappings_channel=parchment
+mappings_version=2021.12.19-1.18.1
 
 mod_id=ventureonwards
 mod_name=Venture Onwards
