--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ mod_name=Verdure
 mod_version=1.0.0
 mod_base_package=samebutdifferent.verdure
 mod_authors=SameButDifferent, Drigonis
-mod_description=Overhauls the vanilla biome landscapes
+mod_description=A generation mod that overhauls the overworld with a bunch of new blocks!
