--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.daemon=false
 
 minecraft_version=1.18.1
 minecraft_version_range=[1.18,1.19)
-forge_version=39.0.66
-forge_version_range=[39,)
+forge_version=39.0.75
+forge_version_range=[39.0.66,40)
 loader_version_range=[39,)
 mappings_channel=parchment
-mappings_version=2021.12.19-1.18.1
+mappings_version=2022.01.23-1.18.1
 
 mod_id=verdure
 mod_name=Verdure
-mod_version=1.0.1
+mod_version=1.0.2
 mod_base_package=samebutdifferent.verdure
 mod_authors=SameButDifferent, Drigonis
 mod_description=A generation mod that overhauls the overworld with a bunch of new blocks!
