--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.18.1
-minecraft_version_range=[1.18,1.19)
-forge_version=39.0.75
-forge_version_range=[39.0.66,40)
-loader_version_range=[39,)
+minecraft_version=1.18.2
+minecraft_version_range=[1.18.2,1.19)
+forge_version=40.0.41
+forge_version_range=[40,)
+loader_version_range=[40,)
 mappings_channel=parchment
-mappings_version=2022.01.23-1.18.1
+mappings_version=1.18.1-2022.03.06-1.18.2
 
 mod_id=verdure
 mod_name=Verdure
-mod_version=1.0.3
+mod_version=1.0.5
 mod_base_package=samebutdifferent.verdure
 mod_authors=SameButDifferent, Drigonis
 mod_description=A generation mod that overhauls the overworld with a bunch of new blocks!
