--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ mod_version=1.0.5
 mod_base_package=samebutdifferent.verdure
 mod_authors=SameButDifferent, Drigonis
 mod_description=A generation mod that overhauls the overworld with a bunch of new blocks!
+
+# Dependencies
+mixin_version=0.8.5
